@@ -5,7 +5,6 @@ import jmathlib.core.tokens.OperandToken;
 import jmathlib.core.tokens.numbertokens.*;
 import jmathlib.core.functions.ExternalFunction;
 import jmathlib.core.tokens.CharToken;
-import jmathlib.core.tokens.MatrixToken;
 
 /**An external function for changing numbers into strings*/
 public class num2str extends ExternalFunction
@@ -21,10 +20,6 @@ public class num2str extends ExternalFunction
         
         double[][]  x = ((DoubleNumberToken)operands[0]).getReValues();
         
-        //JMH: The following limitation is not correct.
-        if ( x.length != 1)
-            throwMathLibException("num2str: works only on row vectors");
-        
         if (x.length == 1 && x[0].length == 1) {
           String data = Double.toString(x[0][0]);
         
@@ -34,21 +29,47 @@ public class num2str extends ExternalFunction
              
           return new CharToken(data);            
         } else {
-          CharToken[][] result = new CharToken[x.length][x[0].length];
-          String data = null;
-          for (int i=0;i<x.length;i++) {
-            for (int j=0; j<x[i].length; j++) {
-              data = Double.toString(x[i][j]);
-        
-              //Cull the decimal point if the number is whole.
-              if (data.endsWith(".0"))
-                data = data.substring(0, data.length()-2);    
-              result[i][j] = new CharToken(data);
-            }        
-          }
-          return new MatrixToken(result);
-        }
+            String[][] strData = new String[x.length][x[0].length];
+            int[] maxColLength = new int[x[0].length];
+            boolean containsFractional = false;
+            for (int row=0;row<x.length;row++) {
+                for (int col=0;col<x[row].length;col++) {
+                    String str = Double.toString(x[row][col]);                    
+                    //Cull the decimal point if the number is whole.
+                    if (str.endsWith(".0"))
+                      str = str.substring(0, str.length()-2);
+                    else if (str.indexOf('.') != -1)
+                            containsFractional = true;
+                    
+                    strData[row][col] = str;
+                    if (str.length() > maxColLength[col])
+                        maxColLength[col] = str.length();
+                }
+            }
+            
+            if (x.length == 1 && !containsFractional) {
+              StringBuffer b = new StringBuffer();
+              for (int col=0;col<x[0].length;col++) {
+                  b.append(strData[0][col]);
+              }
+              return new CharToken(b.toString());
+            } else {
+              String[] strRows = new String[x.length];  
+              for (int row=0;row<x.length;row++) {
+                StringBuffer b = new StringBuffer();
+                for (int col=0;col<x[row].length;col++) {
+                    b.append(strData[row][col]);
+                    
+                    //TODO use maxColLength to format each row correctly
+                    if (col < (x[row].length-1))
+                        b.append(' ');
+                }
+                strRows[row] = b.toString();
+              }
+              return new CharToken(strRows);
+            }
 	}
+        }
 }
 
 /*
